modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <html>
     <head>
-        <title>Shin Yuna Fanclub</title>
+        <title>Jimbucktwo</title>
         <style>
             img {
                 width: 100px;
                 border-radius: 10px;
-                float: left;
-                margin-right: 10px;
+                margin-bottom: 20px;
             }
 
             .username {
@@ -18,8 +17,8 @@
         </style>
     </head>
     <body>
-        <img src="images/yuna.JPG" width = "300">
-        <p class="username">@shinyunahussey</p>
+        <center><img src="images/yuna.JPG" width = "300"></center>
+        <p class="username"></p>
         <p>The most amazing beautiful girl ever.</p>
     </body>
 </html>
