modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <title>Jimbucktwo</title>
+        <title>Project Portfolio</title>
         <style>
             img {
                 width: 100px;
@@ -17,8 +17,11 @@
         </style>
     </head>
     <body>
-        <center><img src="images/yuna.JPG" width = "300"></center>
-        <p class="username"></p>
-        <p>The most amazing beautiful girl ever.</p>
+        <center>
+            <h1>My Personal Projects</h1>
+            <img src="images/yuna.JPG" width = "300">
+            <p class="username"></p>
+            <p>The most amazing girl ever.</p>
+        </center>
     </body>
 </html>
