new file:   images/myphoto.JPG 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 
-
 <html>
-    <head>
-        <title>Project Portfolio</title>
-        <style>
-            img {
-                width: 100px;
-                border-radius: 10px;
-                margin-bottom: 20px;
-            }
+  <head>
+    <title>Project Portfolio</title>
+    <style>
+      .myphoto {
+        width: 200px;
+        border-radius: 10px;
+        text
+        margin-bottom: 20px;
+      }
 
-            .username {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body>
-        <center>
-            <h1>My Personal Projects</h1>
-            <img src="images/yuna.JPG" width = "300">
-            <p class="username"></p>
-            <p>The most amazing girl ever.</p>
-        </center>
-    </body>
+      .username {
+        font-weight: bold;
+      }
+
+    .bio {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 15px;
+    }
+    </style>
+  </head>
+  <body>
+    <center>
+      <h1>My Personal Projects</h1>
+    </center>
+      <img class="myphoto" src="images/myphoto.JPG" width="300" />
+      <p class="username"></p>
+      <p class="bio">
+        Hi! I am currently a student at California State University, Long Beach
+        and am pursuing my bachelors degree in Computer Science. Here are a
+        couple of projects that I have completed/working on.
+      </p>
+    
+  </body>
 </html>
