--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
       .myphoto {
         width: 200px;
         border-radius: 10px;
-        text
-        margin-bottom: 20px;
+        object-fit: cover;
+        float: left;
+        margin-right: 20px;
       }
 
       .username {
         font-weight: bold;
       }
 
-    .bio {
+      .bio {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 15px;
-    }
+      }
     </style>
   </head>
   <body>
     <center>
       <h1>My Personal Projects</h1>
     </center>
-      <img class="myphoto" src="images/myphoto.JPG" width="300" />
-      <p class="username"></p>
-      <p class="bio">
-        Hi! I am currently a student at California State University, Long Beach
-        and am pursuing my bachelors degree in Computer Science. Here are a
-        couple of projects that I have completed/working on.
-      </p>
-    
+    <img class="myphoto" src="images/myphoto.JPG" width="300" />
+    <p class="username"></p>
+    <p class="bio">
+      Hi! I am currently a student at California State University, Long Beach
+      and am pursuing my bachelors degree in Computer Science. Here are a couple
+      of projects that I have completed/working on.
+    </p>
   </body>
 </html>
