modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,32 +6,38 @@
     <style>
       .myphoto {
         width: 200px;
-        border-radius: 10px;
-        text
-        margin-bottom: 20px;
+        height: 200px;
+        border-radius: 100px;
+        float: left;
+        margin-right: 20px;
+        object-fit: cover;
       }
 
       .username {
         font-weight: bold;
       }
 
-    .bio {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      .bio {
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
-    }
+      }
     </style>
   </head>
   <body>
     <center>
       <h1>My Personal Projects</h1>
     </center>
-      <img class="myphoto" src="images/myphoto.JPG" width="300" />
-      <p class="username"></p>
+    <img class="myphoto" src="images/myphoto.JPG" width="300" />
+    <p class="username"></p>
+    <div>
       <p class="bio">
         Hi! I am currently a student at California State University, Long Beach
         and am pursuing my bachelors degree in Computer Science. Here are a
-        couple of projects that I have completed/working on.
+        couple of projects that I have completed or am currently working on.
       </p>
-    
+    </div>
+    <div>
+        <a href=""></a>
+    </div>
   </body>
 </html>
