--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Portfolio</title>
-    <style type="text/css">
-      @import url("styles.css");
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <center>
@@ -21,21 +19,27 @@
         <p class="bio">
           Hi! I am currently a student at California State University, Long
           Beach and am in the midst of pursuing my bachelors degree in Computer
-          Science. Here are a couple of projects that I have completed.
+          Science.
         </p>
       </div>
 
-      <div>
+      <div class="replit-div">
         <button
           class="first-div-button"
           onclick="window.location.href='https://replit.com/@JimmyTran26';"
         >
           Replit Projects
         </button>
-
+      </div>
+      <div class="insta-div">
         <button class="first-div-button">Instagram</button>
+      </div>
+      <div class="github-div">
         <button class="first-div-button">Github</button>
       </div>
     </center>
+    <div class="test-div">
+
+    </div>
   </body>
 </html>
