--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         </button>
       </div>
       <div class="insta-div">
-        <button class="first-div-button">Instagram</button>
+        <button class="first-div-button"
+        onclick="window.location.href='https://www.instagram.com/jimothytran/';">Instagram</button>
       </div>
       <div class="github-div">
-        <button class="first-div-button">Github</button>
+        <button class="first-div-button"
+        onclick="window.location.href='https://github.com/jimbucktwo';">Github</button>
       </div>
     </center>
     <div class="test-div">
