--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <center>
+    <div class="home-page">
       <div class="introduction">
         <h1>My Personal Projects</h1>
-        <img class="myphoto" src="images/myphoto.JPG" width="300" />
+        
       </div>
-
+      <img class="myphoto" src="images/myphoto.JPG" width="300" />
       <div class="biography">
         <p class="bio">
           Hi! I am currently a student at California State University, Long
@@ -23,25 +24,14 @@
         </p>
       </div>
 
-      <div class="replit-div">
-        <button
-          class="first-div-button"
-          onclick="window.location.href='https://replit.com/@JimmyTran26';"
-        >
-          Replit Projects
-        </button>
+      <div>
+        <ul id="main-menu">
+          <li id="main-menu1"><a href="">Resume</a></li>
+          <li id="main-menu2"><a href="">Projects</a></li>
+          <li id="main-menu3"><a href="">Contact</a></li>
+        </ul>
       </div>
-      <div class="insta-div">
-        <button class="first-div-button"
-        onclick="window.location.href='https://www.instagram.com/jimothytran/';">Instagram</button>
-      </div>
-      <div class="github-div">
-        <button class="first-div-button"
-        onclick="window.location.href='https://github.com/jimbucktwo';">Github</button>
-      </div>
-    </center>
-    <div class="test-div">
-
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
