--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Project Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
   </head>
   <body>
     <div class="home-page">
@@ -23,15 +25,21 @@
           Science.
         </p>
       </div>
-
+      <ul class="socialicons">
+        <li><a href="#" class="transition">&#x2a;</a></li>
+          <li><a href="#" class="transition">&#x2c;</a></li>
+          <li><a href="#" class="transition">&#x2d;</a></li>
+          <li><a href="#" class="transition">&#x31;</a></li>
+      </ul>
       <div>
         <ul id="main-menu">
           <li id="main-menu1"><a href="">Resume</a></li>
           <li id="main-menu2"><a href="">Projects</a></li>
           <li id="main-menu3"><a href="">Contact</a></li>
         </ul>
+        <a href="www.csulb.edu"> csulb</a>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
   </body>
 </html>
