--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>My Personal Projects</h1>
         
       </div>
-      <img class="myphoto" src="images/myphoto.JPG" width="300" />
+      <img class="myphoto" src="images/myphoto2.JPG" width="300" />
       <div class="biography">
         <p class="bio">
           Hi! I am currently a student at California State University, Long
