added cover letter

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="home-page">
-      
-       <h1>A Little Bit About Myself</h1>
+      <section>
+       <h1>My Personal Website</h1>
        <div class="description">
        <ul class="introduction">
         <li>Name: Jimmy Tran</li>
@@ -23,15 +23,20 @@
        </ul>
        <img class="myphoto" src="images/myphoto.JPG" width="300" />
       </div>
-      <img class="myphoto" src="images/myphoto.JPG" width="300" />
-      <div class="biography">
-        <p class="bio">
-          Hi! I am currently a student at California State University, Long
-          Beach and am in the midst of pursuing my bachelors degree in Computer
-          Science.
+    </section>
+      <section>
+        <h2>Cover Letter</h2>
+        <p class="cover-letter">Hi, I am currently enrolled at California State University, Long Beach and am in the midst of pursuing my Bachelors in Computer Science.
+          My goals are to develop my web skills with emphasis on front-end aspects. Throughout my college degree, I have taken relevant courses such as:
         </p>
-
-      </div>
+        <ul id="courses">
+          <li>Data Structures and Algorithms</li>
+          <li>Databases (Relational and NoSQL)</li>
+          <li>Mobile App Development in Android</li>
+          <li>Cybersecurity</li>
+          <li>Web Development</li>
+        </ul>
+      </section>
       <div>
         <ul id="main-menu">
           <li id="main-menu1"><a href="">Resume</a></li>
