added cover letter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Email: jimmytraann@gmail.com</li>
         <li>Phone Number: (714)-951-1350</li>
        </ul>
-       <img class="myphoto" src="images/myphoto.JPG" width="300" />
+       <img class="myphoto" src="images/myphoto3.jpeg"/>
       </div>
     </section>
       <section>
@@ -33,9 +33,12 @@
           <li>Data Structures and Algorithms</li>
           <li>Databases (Relational and NoSQL)</li>
           <li>Mobile App Development in Android</li>
-          <li>Cybersecurity</li>
           <li>Web Development</li>
         </ul>
+
+        <p class="cover-letter-2">I also have experience working with various different software, such as ReactJS, NodeJS, Android Studio, MongoDB, and GitHub to name a few. 
+           I am also curious to learn new technologies since I have a knack at picking things up quick. Click below to explore more about me!
+        </p>
       </section>
       <div>
         <ul id="main-menu">
