--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
        <h1>My Personal Website</h1>
        <div class="description">
        <ul class="introduction">
-        <li>Name: Jimmy Tran</li>
-        <li>Email: jimmytraann@gmail.com</li>
-        <li>Phone Number: (714)-951-1350</li>
+        <li><span class="first-word">Name:</span> Jimmy Tran</li>
+        <li><span class="first-word">Email:</span> jimmytraann@gmail.com</li>
+        <li><span class="first-word">Phone:</span> (714)-951-1350</li>
+        <li><span class="first-word">Grad Date:</span> May 2025</li>
        </ul>
-       <img class="myphoto" src="images/myphoto3.jpeg"/>
+       <div class = "photo"><img class="myphoto" src="images/myphoto3.jpeg"/></div>
       </div>
     </section>
       <section>
@@ -40,6 +41,7 @@
            I am also curious to learn new technologies since I have a knack at picking things up quick. Click below to explore more about me!
         </p>
       </section>
+      <section>
       <div>
         <ul id="main-menu">
           <li id="main-menu1"><a href="">Resume</a></li>
@@ -47,7 +49,7 @@
           <li id="main-menu3"><a href="">Contact</a></li>
         </ul>
       </div>
-
+      </section>
       <ul class="socialicons">
         <li><a href="#" class="transition">&#x2a;</a></li>
         <li><a href="#" class="transition">&#x2c;</a></li>
