--- a/index.html
+++ b/index.html
@@ -256,7 +256,12 @@
 
     <!-- PROJECTS SECTION -->
 
-    <section id="projects"></section>
-    <section id="contact"></section>
+    <section id="projects">
+      
+    </section>
+
+    <section id="contact">
+
+    </section>
   </body>
 </html>
