added projects page

--- a/index.html
+++ b/index.html
@@ -267,181 +267,52 @@
     <!-- PROJECTS SECTION -->
 
     <section id="projects">
-      <ul class="cats-filter" id="portfolio-filter">
-        <li><a href="" class="current transition" data-filter="*">All</a></li>
-
-        <li><a href="" class="transition" data-filter=".games">Games</a></li>
-
-        <li><a href="" class="transition" data-filter=".apps">Apps</a></li>
-
-        <li>
-          <a href="" class="transition" data-filter=".webdev"
-            >Web Development</a
-          >
-        </li>
-
-        <li>
-          <a href="" class="transition" data-filter=".mixed">Mixed Media</a>
-        </li>
-
-        <li>
-          <a href="" class="transition" data-filter=".workshops">Workshops</a>
-        </li>
-
-        <li><a href="" class="transition" data-filter=".music">Music</a></li>
-      </ul>
       <div class="extra-text">
-        I've worked on some cool things... take a look!
+        <h2>I've worked on some cool things... take a look!</h2>
       </div>
       <ul id="portfolio-list">
-        <li class="workshops games">
-          <a
-            href="portfolio/1.jpg"
-            rel="portfolio[1]"
-            title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet"
-            class="folio"
-          >
-            <img src="portfolio/1-thumb.jpg" alt="Image Title" />
-            <h2 class="title">Workout Tracker</h2>
-            <span class="categorie">Apps / Web Development</span>
-          </a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
+          
         </li>
 
-        <li class="webdev">
-          <a
-            href="https://youtu.be/dQw4w9WgXcQ"
-            rel="portfolio"
-            title="This is the description"
-            class="folio"
-          >
-            <img src="portfolio/3-thumb.jpg" alt="" />
-            <h2 class="title">Dogecoin Monitor</h2>
-            <span class="categorie">Web Development</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="mixed">
-          <a href="http://www.google.com" target="_new">
-            <img src="portfolio/2-thumb.jpg" alt="" />
-            <h2 class="title">Really Angry Birds</h2>
-            <span class="categorie">Mixed Media</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="opensource games">
-          <a href="portfolio/4.jpg" rel="portfolio" class="folio">
-            <img src="portfolio/4-thumb.jpg" alt="" />
-            <h2 class="title">The Denizens</h2>
-            <span class="categorie">Games / Open Source</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="apps opensource">
-          <a
-            href="portfolio/1.jpg"
-            rel="portfolio[1]"
-            title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet"
-            class="folio"
-          >
-            <img src="portfolio/1-thumb.jpg" alt="Image Title" />
-            <h2 class="title">Workout Tracker</h2>
-            <span class="categorie">Apps / Web Development</span>
-          </a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
-          <a
-            href="portfolio/4.jpg"
-            rel="portfolio[1]"
-            title="This is the description"
-            class="folio hidden"
-          ></a>
+        
+        <li class="project" >
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="webdev">
-          <a
-            href="https://www.youtube.com/watch?v=_lK4cX5xGiQ"
-            rel="portfolio"
-            title="This is the description"
-            class="folio"
-          >
-            <img src="portfolio/3-thumb.jpg" alt="" />
-            <h2 class="title">Dogecoin Monitor</h2>
-            <span class="categorie">Web Development</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="mixed">
-          <a href="http://www.google.com" target="_new">
-            <img src="portfolio/2-thumb.jpg" alt="" />
-            <h2 class="title">Really Angry Birds</h2>
-            <span class="categorie">Mixed Media</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
-        <li class="opensource games">
-          <a href="portfolio/4.jpg" rel="portfolio" class="folio">
-            <img src="portfolio/4-thumb.jpg" alt="" />
-            <h2 class="title">The Denizens</h2>
-            <span class="categorie">Games / Open Source</span>
-          </a>
+        <li class="project">
+          <a href="#"><img src="images/games.jpg" alt="game image"></a>
+          <h3>Project Title</h3>
+          <p>Project Description</p>
         </li>
       </ul>
     </section>
