--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     />
     <link href="styles.css" rel="stylesheet" />
 
-    <script src="jquerymin.js"></script>
-    <script src="index.js"></script>
+    <script src="js/jquerymin.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body>
     <!-- HOME PAGE -->
