added contact page html and css

--- a/index.html
+++ b/index.html
@@ -317,6 +317,30 @@
       </ul>
     </section>
 
-    <section id="contact"></section>
+    <section id="contact">
+      
+        <h2>Contact Me</h2>
+        <form action="submit_form.php" method="POST">
+          <div class="contact-form">
+            <div class="name">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="email">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="subject">
+                <label for="subject">Subject</label>
+                <input type="text" id="subject" name="subject" required>
+            </div>
+            <div class="message">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+    </div>
+    </section>
   </body>
 </html>
