Cleaned up js file

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
       </div>
       <ul id="portfolio-list">
         <li class="project">
-          <a href="#"><img src="images/games.jpg" alt="game image"></a>
-          <h3>Project Title</h3>
-          <p>Project Description</p>
+          <a href="#"><img src="images/holidays.jpg" alt="holiday image"></a>
+          <h3>International Holiday Tracker</h3>
+          <p>Practices fetch request with Web API to display the holidays of certain countries.</p>
           
         </li>
 
