updated project tab

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
 
             <p class="cover-letter-2">
-              I also have experience working with various different software,
+              I also have experience working with various different software and frameworks,
               such as ReactJS, NodeJS, Android Studio, MongoDB, and GitHub to
               name a few. I am also curious to learn new technologies since I
               have a knack at picking things up quick. Click below to explore
@@ -272,21 +272,21 @@
       </div>
       <ul id="portfolio-list">
         <li class="project">
-          <a href="#"><img src="images/holidays.jpg" alt="holiday image"></a>
+          <a href="https://github.com/jimbucktwo/HolidayTracker" target="_blank"><img src="images/holidays.jpg" alt="holiday image"></a>
           <h3>International Holiday Tracker</h3>
           <p>Practices fetch request with Web API to display the holidays of certain countries.</p>
           
         </li>
 
         <li class="project">
-          <a href="#"><img src="images/games.jpg" alt="game image"></a>
-          <h3>Project Title</h3>
-          <p>Project Description</p>
+          <a href="https://github.com/jimbucktwo/FlappyBird" target="_blank"><img src="images/flapppy.png" alt="Flappy Bird"></a>
+          <h3>Flappy Bird</h3>
+          <p>Flappy Bird replicate, simple web app game that practices DOM manipulation and event handlers.</p>
         </li>
         <li class="project">
-          <a href="#"><img src="images/games.jpg" alt="game image"></a>
-          <h3>Project Title</h3>
-          <p>Project Description</p>
+          <a href="https://github.com/jimbucktwo/PaintingGallery" target="_blank"><img src="images/painting-cover.jpg" alt="painting image"></a>
+          <h3>Paintings Gallery</h3>
+          <p>Gallery of classic paintings, practices event handlers and parsing data.</p>
         </li>
         <li class="project">
           <a href="#"><img src="images/games.jpg" alt="game image"></a>
