--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   >Nov 2022 - Aug 2024</span
                 >
               </h4>
-              <h5>Server</h5>
+              <h5>Supervisor</h5>
               <p>Interacted and served ~30 customers simultaneously</p>
               <p>
                 Ensured guest happiness by initiating conversation and tending
