Updated projects section and comments

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="rating" data-rat="6"></div>
           </li>
           <li>
-            <h4>AWS</h4>
+            <h4>GCP</h4>
             <div class="rating" data-rat="3"></div>
           </li>
         </ul>
@@ -289,9 +289,9 @@
           <p>Gallery of classic paintings, practices event handlers and parsing data.</p>
         </li>
         <li class="project">
-          <a href="#"><img src="images/games.jpg" alt="game image"></a>
-          <h3>Project Title</h3>
-          <p>Project Description</p>
+          <a href="https://github.com/jimbucktwo/WeatherApp" target="_blank"><img src="images/weatherlogo.png" alt="weather image"></a>
+          <h3>WeatherApp</h3>
+          <p>Simple Weather App, consumes OpenWeatherApp API and displays weather for various cities.</p>
         </li>
         
         <li class="project" >
